     server-status page and ExtendedStatus enabled, for browsers which
     perform charset "detection".  Reported by Stefan Esser.  [Joe Orton]

  *) SECURITY: CVE-2007-1862 (cve.mitre.org)
     mod_mem_cache: Copy headers into longer lived storage; header names and
     values could previously point to cleaned up storage.  PR 41551.
     [Davi Arnaut <davi haxent.com.br>]

  *) mime.types: add Registered Javascript/ECMAScript MIME types (RFC4329)
     PR 40299 [Dave Hodder <dmh dmh.org.uk>]

  *) mod_filter: fix integer comparisons in dispatch rules
     PR 41835 [Nick Kew]

  *) mod_filter: fix merging of ! and = in FilterChain
     PR 42186 [Issac Goldstand <margol beamartyr.net>]

  *) mod_deflate: don't try to process metadata buckets as data.  what should
     have been a 413 error was logged as a 500 and a blank screen appeared
     at the browser.
     [Greg Ames, Ruediger Pluem]

  *) mod_cgi, mod_cgid: Fix use of CGI scripts as ErrorDocuments.
     PR 39710.  [Paul Querna, Ruediger Pluem]

  *) mod_proxy: Allow to use different values for sessionid
     in url encoded id and cookies. PR 41897. [Jean-Frederic Clere]

  *) mod_proxy: Fix the 503 returned when session route does
     not match any of the balancer members. [Mladen Turk]

  *) mod_proxy: Added ProxyPassMatch directive, which is similar
     to ProxyPass but takes a regex local path prefix. [Jim Jagielski]

  *) mod_cache: Do not set Date or Expires when they are missing from
     the original response or are invalid.  [Justin Erenkrantz]

  *) mod_cache: Correctly handle HEAD requests on expired cache content.
     PR 41230.  [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_cache: Let Cache-Control max-age set the expiration of the cached
     representation if Expires is not set.  [Justin Erenkrantz]

  *) mod_cache: Allow caching of requests with query arguments when
     Cache-Control max-age is explicitly specified.  [Justin Erenkrantz]
