@@ -78,11 +78,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-    * mod_deflate: fix protocol handling in input filter
-      PR: 23287
-      http://svn.apache.org/viewvc/httpd/httpd/trunk/modules/filters/mod_deflate.c?r1=556113&r2=563133
-      +1: niq, rpluem, jim
-
     * mod_deflate: don't try to operate on a Content-Range
       trunk: http://svn.apache.org/viewvc?view=rev&revision=563154
              http://svn.apache.org/viewvc?view=rev&revision=563229
