@@ -26,6 +26,9 @@ Changes with Apache 2.2.5
      values could previously point to cleaned up storage.  PR 41551.
      [Davi Arnaut <davi haxent.com.br>]
 
+  *) mod_deflate: fix protocol handling in deflate input filter
+     PR 23287 [Nick Kew]
+
   *) mime.types: add Registered Javascript/ECMAScript MIME types (RFC4329)
      PR 40299 [Dave Hodder <dmh dmh.org.uk>]
 
